# zari-agent

./: .env.example  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  test.py  tests.py
calculator/: calculator.py  lorem.txt  main.py
functions/: functions.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
