[project]
name = "zari-agent"
version = "0.1.0"
description = "AI coding agent powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = [".", "calculator"]
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
